feat(app): Add review and apply page
